# goatfuscator

./: .gitignore  BB2Func.cpp  CMakeLists.txt  Connect.cpp  Dumbo.cpp  DuplicateBB.cpp  Flattening.cpp  Flattening.cpp._  LICENSE.NOT_OBFUSCATION.md  Merge.cpp  ObfuscateConstant.cpp  README.md  RIV.cpp  Util.cpp  Util.h  chunk.h  hello.c  makefile  vm.cpp  vm_rt.h
Obfuscate/: BB2Func.cpp  CodeExtractor2.cpp  CodeExtractor2.h  Connect.cpp  Dumbo.cpp  DuplicateBB.h  MLIRUtil.cpp  MLIRUtil.h  Merge.cpp  ObfuscateConstant.cpp  RIV.h  Util.cpp  Util.h  regalloc2.h  sek.cpp  stack-emu.h  vm.cpp  vm.h
include/: stack.h  tf.h
